# penpot-api-mcp

./: .gitignore  .lycheecache  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.crackerjack/logs/: ai-fix-errors-20260620-030441.json  ai-fix-errors-20260620-030550.json  ai-fix-errors-20260620-030822.json  ai-fix-errors-20260620-030925.json
.crackerjack/oneiric_cache/: workflow_checkpoints.sqlite
.crackerjack/uv/cache/: semgrep_version
.oneiric_cache/: runtime_health.json
penpot_api_mcp/: __init__.py  __main__.py  server.py
penpot_api_mcp/clients/: __init__.py  base_client.py  penpot_client.py  penpot_client.py.backup.json
penpot_api_mcp/config/: __init__.py  settings.py
penpot_api_mcp/models/: __init__.py  file.py  object.py  project.py
penpot_api_mcp/tools/: __init__.py  files.py  files.py.backup.json  objects.py  objects.py.backup.json  projects.py  projects.py.backup.json
penpot_api_mcp/utils/: __init__.py  transit.py
settings/: penpot_api_mcp.yaml
tests/: test_client.py  test_models.py  test_settings.py  test_transit.py
